# gravymap

./: .gitignore  FEATURES.md  README.md  pyproject.toml
src/: camera.py  detector.py  detector_process.py  file_tools.py  scanner.py
src/gravymap/: database_populator.py  detector.py  detector_fast.py  detector_process.py  file_tools.py  file_writer_process.py  led.py  model.py  queues.py  scanner.py  sfm.py  sfm_process.py  visualize_process.py
src/gravymap/backends/: backend_utils.py  backend_writing_guide.md
src/gravymap/backends/fadecandy/: fadecandy_backend.py
src/gravymap/backends/fcmega/: fcmega_backend.py
src/gravymap/backends/pixelblaze/: gravymap.epe  pixelblaze_backend.py  upload_map_to_pixelblaze.py
src/gravymap/scripts/: arg_tools.py  check_backend_cli.py  check_camera_cli.py  patch_leds_cli.py  scanner_cli.py  upload_map_to_pixelblaze_cli.py
utils/: arg_tools.py  scanner_cli.py
