[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project]
name = "gravymap"
version = "1.0.0"

dependencies = [
    "numpy",
    "opencv-python",
    "tqdm",
    "open3d",
    "pycolmap==3.11.1", # 2 track is broken on > 3.12. see https://github.com/TheMariday/marimapper/issues/79
    "pyserial",          # required by fcmega
    "pixelblaze-client", # required by pixelblaze
    "requests"           # required by wled
]

classifiers = [
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

requires-python = ">=3.9,<3.13"

maintainers = [
  {name = "trobertson"},
]
description = "3D LED mapper with extended features: camera orientation, brightness-based alignment, and LED patching. Based on marimapper by TheMariday."
readme = "README.md"
license = {file = "LICENSE"}


[project.optional-dependencies]
develop = [
    "pytest",
    "pytest-cov",
    "black",
    "flake8",
    "flake8-bugbear"
    ]

[project.urls]
Homepage = "https://github.com/Gravydigz/gravymap"
Documentation = "https://github.com/Gravydigz/gravymap"
Repository = "https://github.com/Gravydigz/gravymap.git"

[project.scripts]
gravymap = "gravymap.scripts.scanner_cli:main"
gravymap_check_camera = "gravymap.scripts.check_camera_cli:main"
gravymap_check_backend = "gravymap.scripts.check_backend_cli:main"
gravymap_upload_mapping_to_pixelblaze = "gravymap.scripts.upload_map_to_pixelblaze_cli:main"
gravymap_patch_leds = "gravymap.scripts.patch_leds_cli:main"


[tool.coverage.run]
omit = [
    "*/__init__.py",
    "*/__main__.py",
    "src/gravymap/backends/*",
    "src/gravymap/scripts/*",
    "src/gravymap/pycolmap_tools/*",
    ".venv/*"
    ]

[tool.black]
exclude = '''
(/(
    | venv
    | .venv
    | src/gravymap/pycolmap_tools
)/)
'''
